--- a/package.json
+++ b/package.json
@@ -9,16 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/layout": "^2.1.3",
+    "@chakra-ui/react": "^2.2.6",
+    "@dh-react-hooks/use-raf": "^0.9.1",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@prisma/client": "^4.1.1",
+    "bcrypt": "^5.0.1",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
+    "easy-peasy": "^5.0.4",
+    "format-duration": "^2.0.0",
+    "framer-motion": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-howler": "^5.2.0",
+    "react-icons": "^4.4.0",
+    "reset-css": "^5.0.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.6.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "prisma": "^4.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
